# birth-teller

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/:  python-package.yml  python-package.yml
birth_teller/: __init__.py  cli.py  core.py
tests/: test_core.py
