
[project]
name = "birth_teller"
version = "0.1.0"
description = "A Python package to calculate birthdays and zodiac info"
authors = [
  { name = "Emran Hossain Sagor", email = "imrans4gor@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.0"
license = { text = "GPL-3.0" }
dependencies = [
    "click",
    "pytest"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
